--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,35 +17,44 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Git History # Retrieves the necessary historical information
+      id: ghd
+      uses: proudust/gh-describe@v1
+
     - name: Git ENV
       shell: bash
       run: |
-        echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-        echo "TAG=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
-        echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+        echo "describe: ${{ steps.ghd.outputs.describe }}"
+        echo "tag     : ${{ steps.ghd.outputs.tag }}"
+        echo "distance: ${{ steps.ghd.outputs.distance }}"
+        echo "sha     : ${{ steps.ghd.outputs.sha }}"
+        echo "GIT_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        echo "GIT_TAG=${{ steps.ghd.outputs.describe }}" >> $GITHUB_ENV
+        echo "GIT_BRANCH=$(git symbolic-ref -q --short HEAD)" >> $GITHUB_ENV
+        echo "BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M')" >> $GITHUB_ENV
 
     - name: Generate TAGS (stable)
       if: github.ref_type == 'tag'
       shell: bash
       run: |
         echo "TAG1=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_ENV
-        echo "TAG2=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}" >> $GITHUB_ENV
+        echo "TAG2=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}" >> $GITHUB_ENV
 
     - name: Generate TAGS (dev)
       if: github.ref_type != 'tag'
       shell: bash
       run: |
         echo "TAG1=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev" >> $GITHUB_ENV
-        echo "TAG2=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHA_SHORT }}-${{ env.BRANCH }}" >> $GITHUB_ENV
+        echo "TAG2=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.GIT_SHA_SHORT }}-${{ env.GIT_BRANCH }}" >> $GITHUB_ENV
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
-    
+        go-version: 1.20
+
     - name: Docker Setup Buildx
       uses: docker/setup-buildx-action@v2
-  
+
     - name: Login to Docker Container Registry
       uses: docker/login-action@v2
       with:
@@ -59,7 +68,7 @@ jobs:
       run: echo "$GITHUB_CONTEXT"
 
     - name: Build && Push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v4
       with:
         context: .
         platforms: linux/arm/v7,linux/arm/v6,linux/amd64,linux/arm64
@@ -68,7 +77,10 @@ jobs:
         tags: |
           ${{ env.TAG1 }}
           ${{ env.TAG2 }}
-  
+        build-args: |
+          VERSION=${{ env.GIT_TAG }}
+          BUILDDATE=${{ env.BUILD_DATE }}
+
     - name: Show details of image in the registry
       run: |
         docker buildx imagetools inspect "${{ env.TAG1 }}"
